# Speech2text

./: .gitignore  README.md
python/: cli.py  pyproject.toml
python/speech2text/: __init__.py  config.py  train.py
python/speech2text/data/: processing.py  utils.py
python/speech2text/temp/runs/Feb25_16-46-59_Rashid/: events.out.tfevents.1708876019.Rashid.16208.0
python/speech2text/temp/runs/Feb25_16-51-20_Rashid/: events.out.tfevents.1708876280.Rashid.24484.0
python/speech2text/temp/runs/Feb25_16-54-13_Rashid/: events.out.tfevents.1708876453.Rashid.18968.0
python/speech2text/temp/runs/Feb25_17-12-43_Rashid/: events.out.tfevents.1708877564.Rashid.22292.0
python/speech2text/temp/runs/Feb25_17-16-14_Rashid/: events.out.tfevents.1708877774.Rashid.15168.0
python/speech2text/temp/runs/Feb25_17-16-54_Rashid/: events.out.tfevents.1708877814.Rashid.6460.0
python/speech2text/temp/runs/Feb25_18-52-04_Rashid/: events.out.tfevents.1708883524.Rashid.15980.0
python/speech2text/training/: initializers.py  metrics.py
